--- a/krakmeopen/conf/log_config.yaml
+++ b/krakmeopen/conf/log_config.yaml
@@ -15,11 +15,11 @@ loggers:
     level: INFO
     handlers: [console]
     propagate: no
-  quality_metrics:
+  metrics:
     level: INFO
     handlers: [console]
     propagate: no
-  tally_kmers:
+  kmers:
     level: INFO
     handlers: [console]
     propagate: no
